[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/towers/Tower.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="VisionArea" type="Area2D" parent="."]
position = Vector2( 32, 32 )

[node name="Shape" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource( 1 )

[connection signal="area_entered" from="VisionArea" to="." method="_on_VisionArea_area_entered"]
[connection signal="area_exited" from="VisionArea" to="." method="_on_VisionArea_area_exited"]
